--- a/XoopsEngine/var/etc/bootstrap.legacy.ini
+++ b/XoopsEngine/var/etc/bootstrap.legacy.ini
@@ -15,13 +15,12 @@ resources.legacy = true
 ; database
 resources.db.config = "db"
 resources.db.profiler.enabled = false
-;resources.dblegacy = true
 
 ; config
 resources.config = true
 
 ; module
-resources.modulelegacy = true
+resources.module = true
 
 ; session
 resources.session.config = "session"
@@ -32,21 +31,21 @@ resources.auth.storage = "session"
 ; days
 resources.auth.rememberMe = 14
 
-; view
-; template
-resources.viewlegacy.template.caching = true
-resources.viewlegacy.template.compile_check = false
-resources.viewlegacy.template.debugging = false
-resources.viewlegacy.template.force_compile = false
-resources.viewlegacy.template.error_unassigned = false
-
 ; Translate
 ; system translate adapter
-resources.translatelegacy.adapter = legacy
+resources.translate.adapter = legacy
 ; system translate preload data
-resources.translatelegacy.load.global = true
+resources.translate.load.global = true
 ; module translate preload data
-resources.translatelegacy.module.data = main
+resources.translate.module.data = main
+
+; view
+; template
+resources.view.template.caching = true
+resources.view.template.compile_check = false
+resources.view.template.debugging = false
+resources.view.template.force_compile = false
+resources.view.template.error_unassigned = false
 
 [staging : production]
 
