Added namcespace for module as "Module"

--- a/XoopsEngine/var/etc/bootstrap.legacy.ini
+++ b/XoopsEngine/var/etc/bootstrap.legacy.ini
@@ -9,6 +9,22 @@ phpSettings.date.timezone = "UTC"
 ; user
 resources.user = true
 
+; front controller
+; Do not change defaultModule, otherwise basic service won't work
+resources.frontController.throwExceptions = false
+resources.frontController.defaultModule = "default"
+resources.frontController.defaultControllerName = "index"
+resources.frontController.defaultAction = "index"
+resources.frontController.section = "front"
+;resources.frontController.noViewRenderer = true
+resources.frontController.noErrorHandler = true
+
+; router
+resources.router.route = "raw"
+
+; cache
+resources.cache = true
+
 ; legacy
 resources.legacy = true
 
@@ -40,12 +56,22 @@ resources.translate.load.global = true
 resources.translate.module.data = main
 
 ; view
+resources.view.class = Legacy_Zend_View
+; layout
+resources.view.layout.class = Legacy_Zend_Layout
+resources.view.layout.theme = legacy
+resources.view.layout.navigation = front
+resources.view.layout.plugin.register = true
+resources.view.layout.cache.frontend = core
+resources.view.layout.cache.backend = file
 ; template
 resources.view.template.caching = true
 resources.view.template.compile_check = false
 resources.view.template.debugging = false
 resources.view.template.force_compile = false
 resources.view.template.error_unassigned = false
+; renderer
+resources.view.viewRenderer.class = Legacy_Zend_Controller_Action_Helper_ViewRenderer
 
 [staging : production]
 
