Added security resource

--- a/XoopsEngine/var/etc/bootstrap.legacy.admin.ini
+++ b/XoopsEngine/var/etc/bootstrap.legacy.admin.ini
@@ -7,6 +7,9 @@ phpSettings.date.timezone = "UTC"
 
 ; Resources
 
+; security
+resources.security.config = "security"
+
 ; user
 resources.user = true
 
