--- a/XoopsEngine/var/etc/bootstrap.legacy.ini
+++ b/XoopsEngine/var/etc/bootstrap.legacy.ini
@@ -6,6 +6,9 @@ phpSettings.date.timezone = "UTC"
 
 ; Resources
 
+; security
+resources.security.config = "security"
+
 ; user
 resources.user = true
 
